<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_head_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/car_code_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/not_null_name"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_949494"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/car_type_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/not_null_name"
                android:textSize="@dimen/font_13" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_949494"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/container_size_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/not_null_name"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_949494"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/carry_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:background="@null"
                android:hint="@string/please_input_name"
                android:textSize="@dimen/font_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/kg_name" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_949494"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/gps_equipment_code_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/please_input_gps_number_name"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_949494"></View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_41"
            android:layout_marginLeft="@dimen/dimen_24"
            android:layout_marginRight="@dimen/dimen_24"
            android:background="@drawable/shape_rounded_btn_ee852c_3"
            android:text="@string/confirm_empty_name"
            android:textColor="@color/color_ffffff" />

    </LinearLayout>
</LinearLayout>