<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fafafa"
    android:orientation="vertical">

    <include layout="@layout/layout_head_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:background="@color/color_ffffff"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/edit_driver_info_driver_name"
                android:textColor="@color/color_000000" />

            <EditText
                android:id="@+id/drive_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/not_null_name"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_DDDDDD"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:background="@color/color_ffffff"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/edit_driver_info_driver_tel_photo_num"
                android:textColor="@color/color_000000" />

            <EditText
                android:id="@+id/driver_tel_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/not_null_name"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="@dimen/font_13" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_DDDDDD"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:background="@color/color_ffffff"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/edit_driver_info_driver_license_type"
                android:textColor="@color/color_000000" />

            <EditText
                android:id="@+id/Driver_License_Type_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:focusable="false"
                android:hint="@string/not_null_name"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_DDDDDD"></View>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:background="@color/color_ffffff"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/edit_driver_info_driver_id_num"
                android:textColor="@color/color_000000" />

            <EditText
                android:id="@+id/driver_Card_Oid_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/add_driver_info_hint_enter_id_num"
                android:maxLength="18"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_DDDDDD"></View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSubmit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_41"
            android:layout_marginLeft="@dimen/dimen_24"
            android:layout_marginRight="@dimen/dimen_24"
            android:background="@drawable/shape_rounded_btn_ee852c_3"
            android:text="@string/add_driver_info_save"
            android:textColor="@color/color_ffffff" />

    </LinearLayout>
</LinearLayout>