<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_head_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/car_scheduling_begin_time"
                android:textColor="@color/color_000000" />

            <TextView
                android:id="@+id/begin_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:hint="@string/choice_data"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_list_view_line"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_43"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_18"
            android:paddingRight="@dimen/dimen_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/car_scheduling_end_time"
                android:textColor="@color/color_000000" />

            <TextView
                android:id="@+id/end_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@null"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:hint="@string/choice_data"
                android:textSize="@dimen/font_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:background="@color/color_list_view_line"></View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_40"
        android:paddingTop="@dimen/dimen_40">

        <Button
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_41"
            android:layout_marginLeft="@dimen/dimen_24"
            android:layout_marginRight="@dimen/dimen_24"
            android:background="@drawable/shape_rounded_btn_ee852c_3"
            android:text="@string/car_scheduling_search"
            android:textColor="@color/color_ffffff" />

    </LinearLayout>
</LinearLayout>